tests/checker/bad/return-bad7.scilla
scilla_version 0

library ReturnBad7

contract ReturnBad7 ()

procedure test
  (x : ByStr20 with contract field x : Uint128 end)
    : ByStr20 with contract field x : Uint128, field y : Bool end
  _return := x
end
